# termloop

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  pyproject.toml
termloop/: __init__.py  cache.py  cli.py  compression.py  config.py  main.py  metrics.py  models.py  rag.py  routing.py  security.py  service.py
termloop/providers/: openai_compatible.py
tests/: test_cache.py  test_compression.py  test_config.py  test_integration_api.py  test_rag.py  test_routing.py
