[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termloop"
version = "0.1.0"
description = "A self-hosted token-saving middleware for LLM calls"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "termloop contributors" }
]
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
termloop = "termloop.cli:main"

[tool.setuptools]
packages = ["termloop", "termloop.providers"]

[tool.setuptools.package-data]
termloop = ["py.typed"]

